--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "physhing-app",
   "version": "1.0.0",
   "description": "",
-  "main": "index.html",
+  "main": "index.js",
   "scripts": {
-    "start": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -15,5 +15,13 @@
   "bugs": {
     "url": "https://github.com/Yves-Jean/physhing-app/issues"
   },
-  "homepage": "https://github.com/Yves-Jean/physhing-app#readme"
+  "homepage": "https://github.com/Yves-Jean/physhing-app#readme",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "nodemon": "^2.0.7",
+    "path": "^0.12.7",
+    "serve-favicon": "^2.5.0"
+  }
 }
